# set_demo

./: CMakeLists.txt
inc/: set.h  timer.h
inc/benchmarks/: strategy_benchmark.h
inc/strategy/: binary_search.h  handrolled_binary_search.h  simple_strategy.h  strategy.h
inc/tests/: strategy_test.h
inc/tests/strategy/: binary_search.h  simple_strategy.h
src/: main.cpp  set.cpp
src/benchmarks/: strategy_benchmark.cpp
src/strategy/: binary_search.cpp  handrolled_binary_search.cpp  simple_strategy.cpp
src/tests/: strategy_test.cpp
src/tests/strategy/: binary_search.cpp  simple_strategy.cpp
